--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,15 @@
 .App {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	justify-items: center;
+	margin: 0 auto;
+    background-color: #e4d7ce;
+}
+
+.MainHeading {
+	background: linear-gradient(to right, #22c1c3, #fdbb2d);
+	-webkit-text-fill-color: transparent;
+	-webkit-background-clip: text;
 }
